--- a/Style-Sheets/homepage.css
+++ b/Style-Sheets/homepage.css
@@ -1,3 +1,6 @@
+html {
+    box-sizing: border-box;
+}
 h1 {
     text-align: center;
     text-shadow: 1px 1px 1px red;
@@ -8,5 +11,11 @@ h1 {
     font-size: 25px;
     line-height: 1.6;
     word-spacing: 2;
-    text-align: center; 
+    text-align: center;    
+}
+.box {
+    border: 10px double sienna;
+    padding: 50px;
+    margin: 50px;
+    display: inline-block;
 }
