--- a/Style-Sheets/homepage.css
+++ b/Style-Sheets/homepage.css
@@ -1,6 +1,9 @@
 html {
     box-sizing: border-box;
 }
+body {
+    background-color: aqua;
+}
 h1 {
     text-align: center;
     text-shadow: 1px 1px 1px red;
